# diet-bot-public-demo

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
src/: config.py  main.py
src/analysis/: schemas.py
src/food/: models.py
src/rag/: pipeline.py
src/rules/: engine.py
tests/: test_rule_engine.py
